syntax = "proto3";

package model;

option go_package = "internal/model";

// Request message sent to the model
message ModelRequest {
  oneof request {
    ExportWeightsRequest export_weights = 1;
    ImportWeightsRequest import_weights = 2;
    TrainRequest train = 3;
    EvalRequest eval = 4;
  }
}

message ExportWeightsRequest {}

message ImportWeightsRequest {
  bytes weights = 1;  // Serialized PyTorch state dict
  float weight_ratio = 2;
}

message TrainRequest {}

message EvalRequest {
  string path = 1;
}

// Response message from the model
message ModelResponse {
  bool success = 1;
  string error_message = 2;  // Only set if success = false
  bytes weights = 3;  // Only set for export_weights response
  float loss = 4;  // Only set for train and eval
  float accuracy = 5;  // Only set for eval
}
